--- a/css/styles.css
+++ b/css/styles.css
@@ -1,65 +1,60 @@
+/*header*/
+.header {
+  font-size: 14px;
+  font-weight: 500;
+}
+.list-header {
+  list-style: none;
+}
+.item-header:hover,
+:focus {
+  color: #2196f3;
+}
+.link-header {
+  text-decoration: none;
+  color: #212121;
+}
+.link-header:hover,
+:focus {
+  color: #2196f3;
+}
 
+.nav-list {
+  list-style: none;
+}
+.nav-link {
+  text-decoration: none;
+  color: #212121;
+}
+.nav-link:hover,
+:focus {
+  color: #2196f3;
+}
 /*section 1*/
-.hero {}
+.hero {
+  background-color: #2f303a;
+}
 
-.hero-tittle {}
-
-.hero-button {}
-
+.hero-tittle {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 44px;
+  text-align: center;
+}
+.hero-button {
+  background-color: #2196f3;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.hero-button:hover,:focus,:active{color:#212121;cursor: pointer;}
 
 /*list x4*/
 
-.main {}
-
-.main-tittle {}
-
-.main-list {}
-
-.main-item {}
-
-.main-sub {}
-
-.main-article {}
-
-
 /*section 2 images 3x*/
-.cont {}
-
-.cont-tittle {}
-
-.cont-list {}
-
-.cont-item {}
-
-.cont-img {}
-
 
 /*out team section 3*/
-.team {}
-
-.team-tittle {}
-
-.team-list {}
-
-.team-item {}
-
-.team-img {}
-
-.team-sub {}
-
-.team-article {}
-
 
 /*footer*/
-.footer {}
-
-.logo {}
-
-.adress {}
-
-.adress-list {}
-
-.adress-item {}
-
-.adress-link {}
-
