--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
 }
 .nav-link {
   text-decoration: none;
-  color: #212121;
+  color:var(--article-color);
 }
 .nav-link:hover,
 :focus {
@@ -174,3 +174,7 @@
 :focus {
   color: var(--focus-hover-color);
 }
+
+
+/*pages 2 porfolio*/
+
